--- a/teach.html
+++ b/teach.html
@@ -102,7 +102,7 @@
               </p>
           <h1>Start with Javascript</h1>
             <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
-              Start with a object oriented programming language before you learn HTML and CSS. Why?
+              Javascript is used for the front end and back end. Start with a object oriented programming language before you learn HTML and CSS. Why?
               Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
               once you learn a OOP language, it's a lot easier to learn other OOP languages because a lot of them are the exact
               same concepts, just done differently with different syntax. Coding is hard, it's not easy. Spend one to two hours every day learning.
@@ -139,10 +139,12 @@
               Read the above article to start down the path of recursion.
             </p>
       <h1>HTML & CSS</h1>
-         <p> Hyper Text Markup Language (HTML) is like the bones, the physical framework for your website. It's the
+         <p>What's displayed in your browser. Hyper Text Markup Language (HTML) is like the bones,
+           the physical framework for your website. It's the
            text you are reading right now and how it is arranged. It's how your whole website is arranged.
            Cascading Style Sheets (CSS) is the styling of your website. Changing how your text looks,
-           how your images are presented, and the colors you see. CSS can also do more.
+           how your images are presented, and the colors you see. CSS can also do more. HTML and CSS are part of the
+           View in MVC.
          </p>
       <h2>Sites To Learn HTML & CSS</h2>
           <a href="https://www.codecademy.com/">CodeAcademy.com</a>
@@ -158,9 +160,17 @@
             <p>This is an advanced and extremely thorough run through on how to build an even more elegant website with HTML and
                CSS, but adding jQuery and more. Extended from the previous example.
             </p>
+      <h2>Materialize and Bootstrap</h2>
+          <a href="https://www.codecademy.com/">Materialize</a>
+            <p>
+            </p>
+          <a href="https://www.codecademy.com/">Bootstrap</a>
+            <p>
+            </p>
       <h1>jQuery</h1>
-        <p>jQuery is a javascript library. It helps bring your website alive, adding animation and interactivity to
-           your website. It listens for events, like when you click on a button or push down a key, then it triggers
+        <p>jQuery is a javascript library. It is a part of the View in MVC. It helps bring your website alive,
+           adding animation and interactivity to your website. This is client side.
+           It listens for events, like when you click on a button or push down a key, then it triggers
            an action! Not to get too in depth, just try the link below and take your JS to a whole new level!
         </p>
         <a href="https://www.codecademy.com/">CodeAcademy.com</a>
@@ -168,7 +178,7 @@
              codeschool.com, but they were hard to follow for me. Not as clear. CodeAcademy does a great job.
           </p>
       <h1>MEAN/MERN</h1>
-        <p>A full tech stack that is everything you need to develop full web apps. There are two versions, because you
+        <p>A full tech stack that is everything you need to develop full web apps. Full MVC. There are two versions, because you
           can use either Angular or React for a front end framework. Typically you would only use Angular or React for
           large web apps, but start learning Angular or React after you've learned everything else listed on this page.
         </p>
@@ -208,7 +218,8 @@
           </p>
       <h1>MongoDB</h1>
         <a href="https://docs.mongodb.com/manual/tutorial/">MongoDB Tutorial</a>
-          <p>A NoSQL database program. Uses JSON-like documents with schemas. Very popular right now.</p>
+          <p>A NoSQL database program. Uses JSON-like documents with schemas. Very popular right now. This is the model
+          in MVC.</p>
       <h1>Mongoose</h1>http://mongoosejs.com/
         <a href="http://mongoosejs.com/">Mongoose JS</a>
           <p> Mongoose is an ORM (Object Relational Mapping)for Mongo, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
@@ -218,6 +229,8 @@
         <a href="https://angular.io/">Angular.io</a>
           <p> A front end framework, popular with Google. Angular uses Typescript. This is the official site with docs.
               Stick with Angular 2.0 and above. Most companies are using Angular 2.0. Angular is the View in your MVC.
+              Learn React and Angular last. They are the hardest to learn and will not make much sense without learning
+              the basics first. Angular was a more natural fit for me over React, due to my Java experience
           </p>
         <a href="https://www.codecademy.com/learn/learn-angularjs">CodeAcademy</a>
           <p> Pretty good tutorials to get you started using Angular.
@@ -228,7 +241,8 @@
       <h1>React</h1>
         <a href="https://reactjs.org/">Reactjs.org</a>
           <p> A front end framework created by facebook. React is all about components, making the front end act like magic.
-            This site has tutorials to get going and all the docs you need. React is the View in your MVC.
+            This site has tutorials to get going and all the docs you need. React is the View in your MVC. Learn React and
+            Angular last. They are the hardest to learn and will not make much sense without learning the basics first.
           </p>
         <a href="https://www.codecademy.com/learn/react-101">CodeAcademy</a>
           <p> Pretty good tutorials to get you started using React.
