--- a/teach.html
+++ b/teach.html
@@ -220,7 +220,7 @@
         <a href="https://docs.mongodb.com/manual/tutorial/">MongoDB Tutorial</a>
           <p>A NoSQL database program. Uses JSON-like documents with schemas. Very popular right now. This is the model
           in MVC.</p>
-      <h1>Mongoose</h1>http://mongoosejs.com/
+      <h1>Mongoose</h1>
         <a href="http://mongoosejs.com/">Mongoose JS</a>
           <p> Mongoose is an ORM (Object Relational Mapping)for Mongo, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
             Mongo database.
