--- a/teach.html
+++ b/teach.html
@@ -54,11 +54,11 @@
             <li>Github Account</li>
             <li>Terminal/CLI</li>
             <li>Google Chrome/Chrome Dev Tools</li>
-            <li>Heroku</li>
-            <li>Jshint</li>
-          </ol>
+            <li>Heroku Account</li>
+            <li>Jshint.com Bookmarked</li>
+          </ol> </br>
           <h1> Different Tech Stacks</h1>
-          <p> There are a lot of different Tech Stacks. A Tech Stack is a full stack of web technologies
+          <p> There are a lot of different Tech Stacks. One version of a Tech Stack is a full stack of web technologies
             you use to build a web app, divided into Front End and Back End. Front End is what you see, Back End
             is where are all of the information is stored. A web app is a website like Facebook or Google. It's not the exact
             same thing as building an IOS app or Android app. Each of those are their own careers in tech.
