--- a/teach.html
+++ b/teach.html
@@ -71,7 +71,8 @@
             <a href="https://www.codecademy.com/catalog/language/bash">Linux/CLI</a>
             <p> You need to learn how to navigate your computer from a terminal. Using a Mac or Linux based OS provides
                 you with a terminal, typically a BASH terminal. Creating files, directories, running a node server, installing
-                everything you need for an app; all of this is done from a command line. Learn it, love it, use it.
+                everything you need for an app; all of this is done from a command line. Learn it, love it, use it. The above
+                CodeAcademy link does a great job.
             </p>
           <h1>Learn GIT</h1>
             <a href="https://www.codecademy.com/catalog/language/bash">GIT</a>
@@ -82,10 +83,10 @@
             <a href="https://github.com/">github.com</a>
               <p> This is the most prominent git repository. This is where you store your projects. This is where
                 companies store their projects. This is where you can get ruby gems to use, where you can get premade
-                MERN stack or MEAN stack templates. A place for companies look at your code to see what you are doing.
+                MERN stack or MEAN stack templates. A place for companies to look at your code to see what you are doing.
               </p>
           <h1>Pick a Text Editor</h1>
-            <p>Either will work great. A text editor is for writing code, for creating your web apps. They both also
+            <p>Either Atom or Sublime will work great. A text editor is for writing code, for creating your web apps. They both also
             allow you to run code in a console, to see if your code works or to see if there are errors.</p>
             <a href="https://www.sublimetext.com/">Sublime Text Editor</a>
               <p> I love the console I have set up in sublime. Great for running code really quickly.
@@ -96,12 +97,14 @@
               </p>
           <h1>Using Google Chrome Dev Tools</h1>
             <a href="https://developer.chrome.com/devtools">Chrome Dev Tools</a>
-              <p>This is a link to learn how to use Chrome Dev Tools. You can open it on any website displayed on your
+              <p>This is a link to learn how to use Chrome Dev Tools. Of course you need Google Chrome to use it.
+                 You can open it on any website displayed on your
                  browser (Google Chrome Only). It allows you to have a console for testing code, to see errors, to examine
-                 your HTML and CSS, to see what other websites code looks like. You will use it often.
+                 your HTML and CSS, to see what other websites code looks like. You will use it often. Mozilla has one too, but Chrome's
+                 is used more widely.
               </p>
           <h1>Start with Javascript</h1>
-            <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
+            <p> This is the absolute most important step in your whole journey, one you will work on your entire career.
               Javascript is used for the front end and back end. Start with a object oriented programming language before you learn HTML and CSS. Why?
               Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
               once you learn a OOP language, it's a lot easier to learn other OOP languages because a lot of them are the exact
