--- a/teach.html
+++ b/teach.html
@@ -105,7 +105,8 @@
               </p>
           <h1>Start with Javascript</h1>
             <p> This is the absolute most important step in your whole journey, one you will work on your entire career.
-              Javascript is used for the front end and back end. Start with a object oriented programming language before you learn HTML and CSS. Why?
+              Javascript is an object oriented programming language used for the front end and back end.
+              Start with javascript before you learn HTML and CSS. Why?
               Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
               once you learn a OOP language, it's a lot easier to learn other OOP languages because a lot of them are the exact
               same concepts, just done differently with different syntax. Coding is hard, it's not easy. Spend one to two hours every day learning.
@@ -117,7 +118,7 @@
                 <p>CodeAcademy has a lot! You can do the free version or pay if you want help. I've done both.
                   I've used it for multiple languages, great way to get started. Just stick with Javascript.
                   After you've gotten a good handle on JS, then use it for HTML, CSS, and the Command Line. CodeAcademy is
-                  the perfect way to get started. They give you a great basis to get started with.
+                  the perfect way to get started. They give you a great basis for moving forward.
                 </p>
               <a href="https://www.hackreactor.com/prep-programs?utm_source=googlesearchnetwork&utm_medium=cpc&utm_campaign=P_Search_Brand_Prep">Hack Reactor Prep</a>
                 <p>You can do the free version or pay if you want help. I've done both.
@@ -164,11 +165,17 @@
                CSS, but adding jQuery and more. Extended from the previous example.
             </p>
       <h2>Materialize and Bootstrap</h2>
-          <a href="https://www.codecademy.com/">Materialize</a>
-            <p>
+        <p>These two are very similar, they just have creative differences.</p>
+          <a href="http://materializecss.com/">Materialize</a>
+            <p> A front end framework that takes your HTML, CSS, and Javascript to a better place. Make your website
+              look amazing and help it react like a Single Page Application. I do prefer Materialize over Bootstrap.
             </p>
-          <a href="https://www.codecademy.com/">Bootstrap</a>
-            <p>
+          <a href="http://getbootstrap.com/">Bootstrap</a>
+            <p>Quoted directly from their website: "Build responsive, mobile-first projects on the web with the world's
+               most popular front-end component library.
+               Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype
+               your ideas or build your entire app with our Sass variables and mixins,
+               responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery."
             </p>
       <h1>jQuery</h1>
         <p>jQuery is a javascript library. It is a part of the View in MVC. It helps bring your website alive,
