--- a/teach.html
+++ b/teach.html
@@ -181,7 +181,7 @@
         <p>jQuery is a javascript library. It is a part of the View in MVC. It helps bring your website alive,
            adding animation and interactivity to your website. This is client side.
            It listens for events, like when you click on a button or push down a key, then it triggers
-           an action! Not to get too in depth, just try the link below and take your JS to a whole new level!
+           an action! Not to get too in depth, just try the link below and take your JS/Front end to a whole new level!
         </p>
         <a href="https://www.codecademy.com/">CodeAcademy.com</a>
           <p>You've got it, CodeAcademy! They have a great jQuery series. I've done other sites jQuery series, like
@@ -197,23 +197,24 @@
              Great place to start. This will help you get a sense of how all of the technologies listed below work together.
           </p>
       <h1>Node js</h1>
-          <p> "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven,
+        <a href="https://nodejs.org/en/">Nodejs.org</a>
+          <p>Taken directly from their website- "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven,
             non-blocking I/O model that makes it lightweight and efficient. Node.js' package ecosystem, npm, is the
-            largest ecosystem of open source libraries in the world." - <a href="https://nodejs.org/en/">Nodejs.org</a>
+            largest ecosystem of open source libraries in the world."
           </p>
           <p>Node js is a server side technology. It's part of the back end of your web app. It is what talks between
             the front end and your back end database (Mongo DB).
           </p>
-          <a href="https://courses.edx.org">edx.org</a>
-            <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-              every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
-              They have a node js course you can take for free.
-            </p>
-          <a href="https://www.w3schools.com/nodejs/nodejs_intro.asp">w3schools.com</a>
-            <p> w3schools.com Is an exhaustive source for all things web. I constantly use them for quick CSS and
-              HTML hints. This link brings you to their node course. Once again just like edx, they teach it in
-              conjuction with sql.
-            </p>
+        <a href="https://courses.edx.org">edx.org</a>
+          <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
+            every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
+            They have a node js course you can take for free.
+          </p>
+        <a href="https://www.w3schools.com/nodejs/nodejs_intro.asp">w3schools.com</a>
+          <p> w3schools.com Is an exhaustive source for all things web. I constantly use them for quick CSS and
+            HTML hints. This link brings you to their node course. Once again just like edx, they teach it in
+            conjuction with sql.
+          </p>
       <h1>Express</h1>
         <a href="https://expressjs.com/">Express Website</a>
           <p>"Express is a minimal and flexible Node.js web application framework that provides a robust
