--- a/teach.html
+++ b/teach.html
@@ -178,7 +178,9 @@
                responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery."
             </p>
       <h1>jQuery</h1>
-        <p>jQuery is a javascript library. It is a part of the View in MVC. It helps bring your website alive,
+        <a href="https://jquery.com/">jQuery</a>
+        <p>jQuery is a javascript library. Use this website to learn each function, get to know their docs.
+           It is a part of the View in MVC. jQuery helps bring your website alive,
            adding animation and interactivity to your website. This is client side.
            It listens for events, like when you click on a button or push down a key, then it triggers
            an action! Not to get too in depth, just try the link below and take your JS/Front end to a whole new level!
@@ -211,7 +213,7 @@
             They have a node js course you can take for free.
           </p>
         <a href="https://www.w3schools.com/nodejs/nodejs_intro.asp">w3schools.com</a>
-          <p> w3schools.com Is an exhaustive source for all things web. I constantly use them for quick CSS and
+          <p> w3schools.com is an exhaustive resource for all things web related. I constantly use them for quick CSS and
             HTML hints. This link brings you to their node course. Once again just like edx, they teach it in
             conjuction with sql.
           </p>
