--- a/teach.html
+++ b/teach.html
@@ -218,7 +218,7 @@
             conjuction with sql.
           </p>
       <h1>Express</h1>
-        <a href="https://expressjs.com/">Express Website</a>
+        <a href="https://expressjs.com/">Express</a>
           <p>"Express is a minimal and flexible Node.js web application framework that provides a robust
              set of features for web and mobile applications." - Expressjs.com
           </p>
@@ -264,7 +264,7 @@
           <p>Edx has a some courses on React to get you going.
           </p>
       </div>
-      <h1 class="work">This Page Is A Work In Progress</h1>
+      <!-- <h1 class="work">This Page Is A Work In Progress</h1> -->
     </section>
     <footer class="primary-footer container group">
       <small>&copy; JavascriptForLife</small>
