--- a/teach.html
+++ b/teach.html
@@ -64,8 +64,8 @@
             same thing as building an IOS app or Android app. Each of those are their own careers in tech.
             The two tech stacks that I am experienced with are Ruby on Rails and the MERN/MEAN tech stacks. Yes there are others,
             but focus on one, then you can learn any other. For now, we are going to focus on the MEAN/MERN stack.
-            MERN stands for MongoDB, Express, React, and Node js. MEAN stands for Mongo DB, Express, Angular, and Node js.
-            These are Javascript based Full Stacks. You will be using the MVC architechtural paradigm: Model-View-Controller.
+            MERN stands for MongoDB, Express, React, and Node js. MEAN stands for MongoDB, Express, Angular, and Node js.
+            These are Javascript based Full Stacks. You will be using the MVC architectural paradigm: Model-View-Controller.
           </p>
           <h1>Learn How To Work From A Command Line Interface/Linux or Unix based</h1>
             <a href="https://www.codecademy.com/catalog/language/bash">Linux/CLI</a>
@@ -81,7 +81,7 @@
                 on those files with multiple people or for yourself.
               </p>
             <a href="https://github.com/">github.com</a>
-              <p> This is the most prominent git repository. This is where you store your projects. This is where
+              <p> This is the most prominent git repository. Github is where you store your projects. This is where
                 companies store their projects. This is where you can get ruby gems to use, where you can get premade
                 MERN stack or MEAN stack templates. A place for companies to look at your code to see what you are doing.
               </p>
@@ -205,17 +205,17 @@
             largest ecosystem of open source libraries in the world."
           </p>
           <p>Node js is a server side technology. It's part of the back end of your web app. It is what talks between
-            the front end and your back end database (Mongo DB).
+            the front end and your back end database (MongoDB).
           </p>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-            every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
+            every part of a full stack. They just use sql instead of Mongodb for their database. Both are great.
             They have a node js course you can take for free.
           </p>
         <a href="https://www.w3schools.com/nodejs/nodejs_intro.asp">w3schools.com</a>
           <p> w3schools.com is an exhaustive resource for all things web related. I constantly use them for quick CSS and
             HTML hints. This link brings you to their node course. Once again just like edx, they teach it in
-            conjuction with sql.
+            conjunction with sql.
           </p>
       <h1>Express</h1>
         <a href="https://expressjs.com/">Express</a>
@@ -235,7 +235,7 @@
           in MVC.</p>
       <h1>Mongoose</h1>
         <a href="http://mongoosejs.com/">Mongoose JS</a>
-          <p> Mongoose is an ORM (Object Relational Mapping)for Mongo, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
+          <p> Mongoose is an ORM (Object Relational Mapping)for MongoDB, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
             Mongo database.
           </p>
       <h1>Angular 2.0 (and above)</h1>
