--- a/teach.html
+++ b/teach.html
@@ -67,7 +67,7 @@
             MERN stands for MongoDB, Express, React, and Node js. MEAN stands for MongoDB, Express, Angular, and Node js.
             These are Javascript based Full Stacks. You will be using the MVC architectural paradigm: Model-View-Controller.
           </p>
-          <img src="assets/imgs/flow.jpg" class="picTwo" alt="flow">
+          <!-- <img src="assets/imgs/flow.jpg" class="picTwo" alt="flow"> -->
           <h1>Learn How To Work From A Command Line Interface/Linux or Unix based</h1>
             <a href="https://www.codecademy.com/catalog/language/bash">Linux/CLI</a>
             <p> You need to learn how to navigate your computer from a terminal. Using a Mac or Linux based OS provides
