--- a/sites.html
+++ b/sites.html
@@ -49,7 +49,7 @@
 
   <section class="row">
       <div class="grid">
-        <h2><a href="https://murmuring-savannah-55075.herokuapp.com/"> ComeShred.com</a></h2>
+        <h2><a href="https://murmuring-savannah-55075.herokuapp.com/">ComeShred</a></h2>
         <h4> This is a social networking web app for extreme sports.
           There is a map where you can find new spots or add spots to
           skate, surf, snowboard, parkour, scooter, bmx, or whatever extreme sports
@@ -62,7 +62,7 @@
           gmaps4rails, underscore, devise, and mailboxer. Deployed on Heroku and
           connected to Google Domains. I am the sole creator and developer of this site.
         </h4>
-        <h2><a href="https://serene-mesa-96151.herokuapp.com/ "> Vagabond</a></h2>
+        <h2><a href="https://serene-mesa-96151.herokuapp.com/ ">Vagabond</a></h2>
         <h4>
           This is a web app for a traveling agency. Different cities have their own
           pages you can post about. You can create your own account and see all of your
@@ -71,14 +71,14 @@
           HTML, CSS, Javascript, and different gems. Gems such as bcrypt and
           FFaker. Deployed on Heroku.
         </h4>
-        <h2><a href="https://shrouded-scrubland-16014.herokuapp.com/"> BeerApp</a></h2>
+        <h2><a href="https://shrouded-scrubland-16014.herokuapp.com/">BeerApp</a></h2>
         <h4> This is a web app for beer enthusiasts. You can find new beers or add new
           beers to the site's list. You can also rate beers for others to see.
           This app was created by Bryan Reese, Jonathan Mules, and I.
           Technologies that were used are Ruby on Rails, Ruby, jQuery,
           Ransack gem (for searching), Ratyrate gem (for star rating), and Materialize.
         </h4>
-        <h2><a href="https://micdropapp.herokuapp.com/playlists"> MicDrop</a></h2>
+        <h2><a href="https://micdropapp.herokuapp.com/playlists">MicDrop</a></h2>
         <h4> This is a web app for creating playlists. Created by my friend Bryan
           Albini and I, it's a MEN stack app. Simple, but one our first apps. We used
           Mongo DB, Mongoose, Bootstrap, Javascript, EJS, and Express. It works
@@ -86,7 +86,7 @@
           and I are working on turning it into a Facebook app.
           Deployed on Heroku.
         </h4>
-        <h2><a href="http://craftcolorist.com/"> Colorist Website</a></h2>
+        <h2><a href="http://craftcolorist.com/">Colorist Website</a></h2>
         <h4> This is a website I created for a friend using godaddy and
           their website builder. I stylized and changed around their
           components. Simple and easy, was my first experinece publishing
