--- a/teach.html
+++ b/teach.html
@@ -206,7 +206,7 @@
             largest ecosystem of open source libraries in the world."
           </p>
           <p>Node js is a server side technology. It's part of the back end of your web app. It is what talks between
-            the front end and your back end database (MongoDB).
+            the front end and your back end database (MongoDB). Node.js is an asynchronous, event-driven engine.
           </p>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
@@ -221,10 +221,11 @@
       <h1>Express</h1>
         <a href="https://expressjs.com/">Express</a>
           <p>"Express is a minimal and flexible Node.js web application framework that provides a robust
-             set of features for web and mobile applications." - Expressjs.com
+             set of features for web and mobile applications." - Expressjs.com. Express is the Controller
+             in MVC.
           </p>
         <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs">Mozilla's Docs on Express</a>
-          <p> Express is the backend part of the stack. The above tutorial will help you work through your first express app.
+          <p> The above tutorial will help you work through your first express app.
               More importanly Mozilla Docs has documentation on everything Javascript. Bookmark that site.
           </p>
         <a href="https://www.npmjs.com/package/ejs">EJS</a>
@@ -232,8 +233,9 @@
           </p>
       <h1>MongoDB</h1>
         <a href="https://docs.mongodb.com/manual/tutorial/">MongoDB Tutorial</a>
-          <p>A NoSQL database program. Uses JSON-like documents with schemas. Very popular right now. This is the model
-          in MVC.</p>
+          <p>A NoSQL database program. Document database – used by your backend application to store its data as JSON
+            (JavaScript Object Notation) documents. Uses JSON-like documents with schemas.
+            Very popular right now. This is the model in MVC.</p>
       <h1>Mongoose</h1>
         <a href="http://mongoosejs.com/">Mongoose JS</a>
           <p> Mongoose is an ORM (Object Relational Mapping)for MongoDB, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
@@ -241,8 +243,8 @@
           </p>
       <h1>Angular 2.0 (and above)</h1>
         <a href="https://angular.io/">Angular.io</a>
-          <p> A front end framework, popular with Google. Angular uses Typescript. This is the official site with docs.
-              Stick with Angular 2.0 and above. Most companies are using Angular 2.0. Angular is the View in your MVC.
+          <p> A front end framework, originally created and maintained by Google. Angular uses Typescript. This is the official site with docs.
+              Stick with Angular 2.0 and above. A lot of companies are using Angular 2.0. Angular is the View in your MVC.
               Learn React and Angular last. They are the hardest to learn and will not make much sense without learning
               the basics first. Angular was a more natural fit for me over React, due to my Java experience
           </p>
