--- a/sites.html
+++ b/sites.html
@@ -49,6 +49,21 @@
 
   <section class="row">
       <div class="grid">
+        <h2><a href="https://sleepy-tundra-55935.herokuapp.com/">LearnToCode</a></h2>
+        <h4> This is a social networking app that teaches a person how to
+          become a full stack web
+          developer. Create an account. Inside you have three pages that teach
+          what tools you need to get started, what to learn in javascript, and
+          where to go to learn how to build full stack web apps. There is
+          a Forum where a user can ask questions and get help. There is a place
+          to create Tasks to help keep track of what a user has learned and
+          what they are working on. Finally, they can contact for me for help.
+        </h4>
+        <h4>
+          This app consists of Ruby on Rails, Ruby, Materialize, jQuery,
+          postgres, Active Record, HTML, and CSS. Deployed on Heroku.
+          I am the sole creator and developer of this site. 
+        </h4>
         <h2><a href="https://murmuring-savannah-55075.herokuapp.com/">ComeShred</a></h2>
         <h4> This is a social networking web app for extreme sports.
           There is a map where you can find new spots or add spots to
@@ -57,8 +72,8 @@
           a page for posting about your sports, events, and/or whatever else is related
           to extreme sports.</h4>
         <h4>
-          This app consists of Ruby on Rails, Ruby, Materialize, jQuery,
-          HTML, CSS, and a lot of different gems. Gems such as bcrypt, geocoder,
+          This app consists of Ruby on Rails, Ruby, Materialize, jQuery, postgres,
+          HTML, CSS, Active Record, and a lot of different gems. Gems such as bcrypt, geocoder,
           gmaps4rails, underscore, devise, and mailboxer. Deployed on Heroku and
           connected to Google Domains. I am the sole creator and developer of this site.
         </h4>
