--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
     <h2>Dedicated To Creating Original Web Apps</h2>
 
-    <p>As a web developer, I want to show others some of the apps I have built and how they too can become a
+    <p>As a web developer, I want to show others some of the apps I have built
+       and how they too can become a
        web developer. Welcome to my site.
     </p>
 
@@ -51,7 +52,7 @@
 
   </section>
 
-  <section class="row">
+  <section class="row" id="black">
       <div class="grid">
         <img src="assets/imgs/erick.jpg" alt="Erick" class="pic">
         <h2>My Coding Journey</h2>
