--- a/index.html
+++ b/index.html
@@ -40,54 +40,60 @@
     </ul>
   </header>
   <section class="hero container">
-
     <h2>Dedicated To Creating Original Web Apps</h2>
-
-    <p>As a web developer, I want to show others some of the apps I have built
-       and how they too can become a
-       web developer. Welcome to my site.
-    </p>
-
-    <a class="btn btn-alt" href="mailto:javascriptforlife@gmail.com">Contact Me!</a>
-
+      <p>As a web developer, I want to show others some of the apps I have built
+         and how they too can become a web developer. Welcome to my site.
+      </p>
+      <a class="btn btn-alt" href="mailto:javascriptforlife@gmail.com">Contact Me!</a>
   </section>
 
   <section class="row" id="black">
       <div class="grid">
         <img src="assets/imgs/erick.jpg" alt="Erick" class="pic">
         <h2>My Coding Journey</h2>
-        <h4> I have gone a lot of different routes before becoming a web developer. I started
-          off not knowing which way to go. A lot of my friends were sysadmins, so I started
-          studying Linux and Networking. Feeling discouraged because it wasn't creative enough for me,
-          I decided to pursue a Computer Science degree. I attended SJSU, but their computer science program
+        <h4> I have gone a lot of different routes before becoming a web
+          developer. A few of my friends were sysadmins, so I started
+          studying Linux and Networking. Feeling discouraged because I didn't
+          have a set direction, I decided to pursue a Computer Science degree.
+          I attended SJSU, but their computer science program
           is absolutely horrid. In my first Java programming class,
-          70% of the students dropped. Out of who was left, only a 1/3 passed from that 30%.
+          70% of the students dropped. Out of who was left, only a 1/3 passed.
           There were four unseen teachers above
-          our teacher, they dictated the homework and tests. The teacher that was "teaching" us
-          refused to help with homework or any lab assignments. So I dropped, but tried again next semester.
+          our teacher, they dictated the homework and tests. The teacher that
+          was "teaching" us refused to help with homework or any lab
+          assignments. So I dropped, but tried again next semester.
           This time, the head of the CS department was teaching programming in Java.
           The teacher was completely arrogant, insulting anyone who asked questions, then asking
           why no one was asking questions. He was a professional, not a teacher. Eventually, SJSU
           decided to lower the requirements for a CS degree because a majority of the students
-          were dropping. I decided to drop the CS degree and went on to finish my music degree,
-          pursuing music tech.</h4> <br>
-          <h4>However, I wasn't about to give up. I decided to teach myself by pursuing other non traditional routes.
-          Everything you need to know is on the web, but there is still a lot you won't learn by teaching yourself.
-          Proper coding techniques, which technologies to learn, algorithms, which field to pursue, and more.
+          were dropping. They dropped the physics requirement.
+          I decided to drop the CS degree and went on to finish my music degree,
+          pursuing music tech.
+        </h4> <br>
+        <h4>However, I wasn't about to give up. I decided to teach myself
+          by pursuing other non traditional routes.
+          Everything you need to know is on the web, but there is still a
+          lot you won't learn by teaching yourself.
+          Proper coding techniques, which technologies to learn, algorithms,
+          which field to pursue, and more.
           In the end, I decided to combine classroom instruction with self instruction.
           So far, I have gone halfway through a CS degree, attended multiple bootcamp
-          preps (Hack Reactor and App Academy), Hack Reactor SSP, worked through multiple coding websites, studied Linux/Unix,
-          Unix Shell scripting, Python, Ruby, Javascript, networking, and then finally attended a coding bootcamp (General Assembly).
-          </h4> <br>
-          <h2>What This Site Is About</h2>
-          <h4>This website is not only for displaying some of my work, but to help others learn how
-          to become a full stack web developer.
-          The first page is to give you links to apps I have built. The second page I've dedicated to giving you step by step instructions on how to become a web
-          developer. Contact me if you need any help or any kind of direction. Not code help, but career guidance. ;)
-          </h4>
+          preps (Hack Reactor and App Academy), Hack Reactor SSP, worked
+          through multiple coding websites, studied Linux/Unix,
+          Unix Shell scripting, Python, Ruby, Javascript, networking, and
+          then finally attended a coding bootcamp (General Assembly).
+        </h4> <br>
+      <h2>What This Site Is About</h2>
+        <h4>This website is not only for displaying some of my work, but to
+          help others learn how to become a full stack web developer.
+          The first page is to give you links to apps I have built.
+          The second page I've dedicated to giving you step by step
+          instructions on how to become a web
+          developer. Contact me if you need any help or any kind of direction.
+          Not code help, but career guidance.
+        </h4>
       </div>
     </section>
-
     <footer class="primary-footer container group">
       <small>&copy; JavascriptForLife</small>
       <nav class="nav primary-nav">
