--- a/sites.html
+++ b/sites.html
@@ -62,7 +62,7 @@
         <h4>
           This app consists of Ruby on Rails, Ruby, Materialize, jQuery,
           postgres, Active Record, HTML, and CSS. Deployed on Heroku.
-          I am the sole creator and developer of this site. 
+          I am the sole creator and developer of this site.
         </h4>
         <h2><a href="https://murmuring-savannah-55075.herokuapp.com/">ComeShred</a></h2>
         <h4> This is a social networking web app for extreme sports.
@@ -104,7 +104,7 @@
         <h2><a href="http://craftcolorist.com/">Colorist Website</a></h2>
         <h4> This is a website I created for a friend using godaddy and
           their website builder. I stylized and changed around their
-          components. Simple and easy, was my first experinece publishing
+          components. Simple and easy, was my first experience publishing
           a website for a friend.
         </h4>
       </div>
