--- a/teach.html
+++ b/teach.html
@@ -64,7 +64,7 @@
             same thing as building an IOS app or Android app. Each of those are their own careers in tech.
             The two tech stacks that I am experienced with are Ruby on Rails and the MERN/MEAN tech stacks. Yes there are others,
             but focus on one, then you can learn any other. For now, we are going to focus on the MEAN/MERN stack.
-            MERN stands for MongoDB, Express, React, and Node js. MEAN stands for MongoDB, Express, Angular, and Node js.
+            MERN stands for MongoDB, Express, React, and Node.js. MEAN stands for MongoDB, Express, Angular, and Node.js.
             These are Javascript based Full Stacks. You will be using the MVC architectural paradigm: Model-View-Controller.
           </p>
           <!-- <img src="assets/imgs/flow.jpg" class="picTwo" alt="flow"> -->
@@ -199,19 +199,19 @@
           <p>This is an extremely thorough run through on the full MEAN/MERN tech stack. Pretty self explanatory.
              Great place to start. This will help you get a sense of how all of the technologies listed below work together.
           </p>
-      <h1>Node js</h1>
+      <h1>Node.js</h1>
         <a href="https://nodejs.org/en/">Nodejs.org</a>
           <p>Taken directly from their website- "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven,
             non-blocking I/O model that makes it lightweight and efficient. Node.js' package ecosystem, npm, is the
             largest ecosystem of open source libraries in the world."
           </p>
-          <p>Node js is a server side technology. It's part of the back end of your web app. It is what talks between
+          <p>Node.js is a server side technology. It's part of the back end of your web app. It is what talks between
             the front end and your back end database (MongoDB). Node.js is an asynchronous, event-driven engine.
           </p>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
             every part of a full stack. They just use sql instead of Mongodb for their database. Both are great.
-            They have a node js course you can take for free.
+            They have a node.js course you can take for free.
           </p>
         <a href="https://www.w3schools.com/nodejs/nodejs_intro.asp">w3schools.com</a>
           <p> w3schools.com is an exhaustive resource for all things web related. I constantly use them for quick CSS and
@@ -226,7 +226,7 @@
           </p>
         <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs">Mozilla's Docs on Express</a>
           <p> The above tutorial will help you work through your first express app.
-              More importanly Mozilla Docs has documentation on everything Javascript. Bookmark that site.
+              More importantly Mozilla Docs has documentation on everything Javascript. Bookmark that site.
           </p>
         <a href="https://www.npmjs.com/package/ejs">EJS</a>
           <p> Templating engine given to you by Express, Embedded JavaScript. Allows you to run javascript in your HTML.
