--- a/sites.html
+++ b/sites.html
@@ -50,11 +50,12 @@
   <section class="row">
       <div class="grid">
         <h2><a href="https://sleepy-tundra-55935.herokuapp.com/">LearnToCode</a></h2>
-        <h4> This is a social networking app that teaches a person how to
+        <h4> This is a social networking app that shows a person how to
           become a full stack web
-          developer. Create an account. Inside you have three pages that teach
+          developer. First, create an account. Inside there are three pages that
+          teach you
           what tools you need to get started, what to learn in javascript, and
-          where to go to learn how to build full stack web apps. There is
+          how to build full stack web apps. There is
           a Forum where a user can ask questions and get help. There is a place
           to create Tasks to help keep track of what a user has learned and
           what they are working on. Finally, they can contact for me for help.
