--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <h3 class="tagline">Full Stack Web Developer</h3>
     <ul>
       <nav class="nav primary-nav">
+        <a href="index.html">Home/</a>
         <a href="sites.html">Sites I have built/</a>
-        <a href="teach.html">Teach Yourself How To Code/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </ul>
