--- a/sites.html
+++ b/sites.html
@@ -35,7 +35,7 @@
     <ul>
       <nav class="nav primary-nav">
         <a href="index.html">Home/</a>
-        <a href="teach.html">Teach Yourself How To Code/</a>
+        <a href="sites.html">Sites I have built/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </ul>
