--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <footer class="primary-footer container group">
       <small>&copy; JavascriptForLife</small>
       <nav class="nav primary-nav">
+        <a href="index.html">Home/</a>
         <a href="sites.html">Sites I have built/</a>
-        <a href="teach.html">Teach Yourself How To Code/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </footer>
