--- a/sites.html
+++ b/sites.html
@@ -45,6 +45,7 @@
     <h2>Web Apps and Websites I Have Created</h2>
     <p>
     </p>
+    <a class="btn btn-alt" href="mailto:javascriptforlife@gmail.com">Contact Me!</a>
   </section>
 
   <section class="row">
@@ -115,7 +116,7 @@
       <small>&copy; JavascriptForLife</small>
       <nav class="nav primary-nav">
         <a href="index.html">Home/</a>
-        <a href="teach.html">Teach Yourself How To Code/</a>
+        <a href="sites.html">Sites I have built/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </footer>
