--- a/sites.html
+++ b/sites.html
@@ -43,7 +43,9 @@
   <section class="hero container">
 
     <h2>Web Apps and Websites I Have Created</h2>
-    <p>
+    <p> HTML, CSS, Materialize, Bootstrap, Javascript, Node.js, Express,
+        React, Ruby, Ruby on Rails, Github, MongoDB, Mongoose, Sequelize
+        PostgreSQL
     </p>
     <a class="btn btn-alt" href="mailto:javascriptforlife@gmail.com">Contact Me!</a>
   </section>
