--- a/sites.html
+++ b/sites.html
@@ -44,7 +44,7 @@
 
     <h2>Web Apps and Websites I Have Created</h2>
     <p> HTML, CSS, Materialize, Bootstrap, Javascript, Node.js, Express,
-        React, Ruby, Ruby on Rails, Github, MongoDB, Mongoose, Sequelize
+        React, Ruby, Ruby on Rails, Github, MongoDB, Mongoose, Sequelize,
         PostgreSQL
     </p>
     <a class="btn btn-alt" href="mailto:javascriptforlife@gmail.com">Contact Me!</a>
